--- a/rro_overlays/SystemUIResCupid/res/values/config.xml
+++ b/rro_overlays/SystemUIResCupid/res/values/config.xml
@@ -11,10 +11,7 @@
     <string name="config_rounded_mask" translatable="false">M144,0c-7.8,0.7-15.6,1.3-23.3,2.1C98.4,4.2,76.9,8.8,57.5,20.4C29.6,37.2,14.3,63,7.3,93.8C4,108.1,2,130.4,0,144</string>
 
     <!-- Doze: does this device support STATE_DOZE?  -->
-    <bool name="doze_display_state_supported">true</bool>
-
-    <!-- Doze: does this device support STATE_DOZE_SUSPEND?  -->
-    <bool name="doze_suspend_display_state_supported">true</bool>
+    <bool name="doze_display_state_supported">false</bool>
 
     <!-- Preferred refresh rate at keyguard, if supported by the display. Overrides
          keyguardMaxRefreshRate. -->
